changed headline after adding footer and added responsive resize to remaining headline to avoid alignment issues on small screens

--- a/public/css/blog_css.css
+++ b/public/css/blog_css.css
@@ -50,6 +50,12 @@ p {
     color: #A8A6A6;
 }
 
+@media only screen and (max-width: 420px) {    
+    #navbar_name h1 {
+        font-size: 2rem;
+    }
+}
+
 #navbar_name h2 {
     font-size: 2rem;
     margin-top: 1.5rem;
